<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:gravity="center_vertical"
    android:padding="5dp"
    android:orientation="horizontal">


    
    <TextView
        android:id="@+id/flightCode_textView"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/square"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:text="@string/default_flightCode"/>

    <TextView
        android:id="@+id/depart_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:text="@string/default_depart"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/arrive_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:text="@string/default_arrive"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/takeoff_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:text="@string/default_takeoff"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/capacity_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:text="@string/default_capacity"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/price_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:text="@string/default_price"
        android:textAlignment="center"
        android:textSize="12sp" />

</LinearLayout>