<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ViewFlightsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Flights"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/depart_system_editText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/default_depart"
            android:inputType="text"
            android:textSize="13sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/arrive_system_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/default_arrive"
            android:inputType="text"
            android:textSize="13sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/takeoff_time_system_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/default_takeoff"
            android:inputType="text"
            android:textSize="13sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/capacity_system_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/default_capacity"
            android:inputType="text"
            android:textSize="13sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/price_system_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/default_price"
            android:inputType="text"
            android:textSize="13sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/flightCode_system_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/default_flightCode"
            android:inputType="text"
            android:textSize="13sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </LinearLayout>

    <Button
        android:id="@+id/add_to_flight_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="addFlight"
        android:text="Create Flight"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/all_system_flights"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>