<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <EditText
        android:id="@+id/create_username_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/create_password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/create_username_editText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/Create_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_username_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-105dp"
        android:text="Create an Account"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="207dp"
        android:text="Create!" />

    <TextView
        android:layout_width="337dp"
        android:layout_height="75dp"
        android:layout_alignStart="@+id/create_username_editText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-59dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="53dp"
        android:fontFamily="monospace"
        android:text="@string/username_password_requirement"
        android:textAlignment="textStart"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="12sp" />

</android.widget.RelativeLayout>